--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 # Check CMake version.
 cmake_minimum_required(VERSION 3.16)
-enable_language(CXX)
 
 # Includes.
 include(FetchContent)
@@ -9,13 +8,15 @@ include(FetchContent)
 project(HyperSensors VERSION 22.07.04 DESCRIPTION "" HOMEPAGE_URL https://github.com/VIS4ROB-lab/HyperSensors LANGUAGES CXX)
 
 # Define libraries and aliases.
-add_library(${PROJECT_NAME} INTERFACE)
+add_library(${PROJECT_NAME} SHARED)
 add_library(Hyper::Sensors ALIAS ${PROJECT_NAME})
 
 # Set properties.
-set_target_properties(${PROJECT_NAME} PROPERTIES INTERFACE_CXX_STANDARD 20 INTERFACE_CXX_STANDARD_REQUIRED YES)
-target_compile_options(${PROJECT_NAME} INTERFACE -Wall -Wextra -Wnon-virtual-dtor -pedantic)
-target_compile_options(${PROJECT_NAME} INTERFACE -O3 -march=native -fconcepts)
+if(PROJECT_IS_TOP_LEVEL)
+    set(CMAKE_CXX_STANDARD 20)
+    set(CMAKE_CXX_STANDARD_REQUIRED YES)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -fconcepts -Wall -Wextra -Wnon-virtual-dtor -pedantic")
+endif()
 
 # Fetch (external) content.
 FetchContent_Declare(HyperState GIT_REPOSITORY https://github.com/VIS4ROB-lab/HyperState.git GIT_TAG 4da639caf2e186c442f400159bdf0a206178c2c2)
@@ -36,33 +37,13 @@ if (NOT TARGET glog::glog)
     find_package(glog REQUIRED)
 endif ()
 
-# Find roscpp.
-if (NOT roscpp_FOUND)
-    find_package(roscpp REQUIRED)
-endif ()
-
-# Find std_msgs.
-if (NOT std_msgs_FOUND)
-    find_package(std_msgs REQUIRED)
-endif ()
-
-# Find sensor_msgs.
-if (NOT sensor_msgs_FOUND)
-    find_package(sensor_msgs REQUIRED)
-endif ()
-
 # Find cv_bridge.
-if (NOT cv_bridge_FOUND)
+if (NOT TARGET cv_bridge::cv_bridge)
     find_package(cv_bridge REQUIRED)
 endif ()
 
-# Find OpenCV.
-if (NOT OpenCV_FOUND)
-    find_package(OpenCV REQUIRED)
-endif ()
-
 # Find yaml-cpp.
-if (NOT yaml-cpp_FOUND)
+if (NOT TARGET yaml-cpp)
     find_package(yaml-cpp REQUIRED)
 endif ()
 
@@ -71,28 +52,18 @@ file(GLOB_RECURSE PROJECT_SOURCE_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/i
 
 target_include_directories(
         ${PROJECT_NAME}
-        INTERFACE
+        PUBLIC
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
-        ${roscpp_INCLUDE_DIRS}
-        ${std_msgs_INCLUDE_DIRS}
-        ${sensor_msgs_INCLUDE_DIRS}
-        ${cv_bridge_INCLUDE_DIRS}
-        ${OpenCV_INCLUDE_DIRS}
-        ${yaml-cpp_INCLUDE_DIRS}
 )
 
 target_sources(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_FILES})
 
 target_link_libraries(
         ${PROJECT_NAME}
-        INTERFACE
+        PUBLIC
         Hyper::State
-        ${roscpp_LIBRARIES}
-        ${std_msgs_LIBRARIES}
-        ${sensor_msgs_LIBRARIES}
-        ${cv_bridge_LIBRARIES}
-        ${OpenCV_LIBRARIES}
+        cv_bridge::cv_bridge
         yaml-cpp
 )
 
