--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: HyperCI
+name: actions
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
     # You can convert this to a matrix build if you need cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     steps:
       - uses: actions/checkout@v3
@@ -26,7 +26,7 @@ jobs:
 
       - name: Configure
         run: |
-          source /opt/ros/noetic/setup.bash
+          source /opt/ros/humble/setup.bash
           mkdir build && cd build && cmake ..
 
       - name: Build
@@ -35,11 +35,11 @@ jobs:
 
       - name: Test
         working-directory: ${{github.workspace}}/build
-        run: ./apps/tests/HyperSensorsTests --gtest_output="xml:${{github.workspace}}/test-results/logs/results.xml"
+        run: ./apps/tests/HyperSensorsTests --gtest_output="xml:${{github.workspace}}/checks/junit/results.xml"
 
       - name: Publish
-        uses: EnricoMi/publish-unit-test-result-action@v1
+        uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          files: "test-results/**/*.xml"
-          check_name: "results"
+          junit_files: "checks/junit/*.xml"
+          check_name: "checks"
