--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -35,11 +35,11 @@ jobs:
 
       - name: Test
         working-directory: ${{github.workspace}}/build
-        run: ./apps/tests/HyperSensorsTests --gtest_output="xml:${{github.workspace}}/checks/junit/results.xml"
+        run: ./apps/tests/HyperSensorsTests --gtest_output="xml:${{github.workspace}}/tests/junit/results.xml"
 
       - name: Publish
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always()
         with:
-          junit_files: "checks/junit/*.xml"
-          check_name: "checks"
+          junit_files: "tests/junit/*.xml"
+          check_name: "tests"
