--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,67 +1,59 @@
-# Check CMake version.
 cmake_minimum_required(VERSION 3.16)
+project(hyper_sensors VERSION 23.05.09 DESCRIPTION "" HOMEPAGE_URL https://github.com/VIS4ROB-lab/HyperSensors LANGUAGES CXX)
 
-# Includes.
-include(FetchContent)
-
-# Define projects.
-project(HyperSensors VERSION 23.01.19 DESCRIPTION "" HOMEPAGE_URL https://github.com/VIS4ROB-lab/HyperSensors LANGUAGES CXX)
-
-# Set properties.
 if (PROJECT_IS_TOP_LEVEL)
     set(CMAKE_CXX_STANDARD 20)
     set(CMAKE_CXX_STANDARD_REQUIRED YES)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -fconcepts -Wall -Wextra -Wnon-virtual-dtor -pedantic")
-    option(HYPER_BUILD_WITH_CERES "Build with Ceres." FALSE)
-    option(HYPER_BUILD_TESTS "Build tests." TRUE)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -march=native -Wall -Wextra -Wnon-virtual-dtor -pedantic")
 endif ()
 
-# Define libraries and aliases.
-file(GLOB_RECURSE PROJECT_SOURCE_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/internal/*.hpp ${PROJECT_SOURCE_DIR}/internal/*.cpp)
+option(HYPER_BUILD_WITH_CERES "Build with Ceres." FALSE)
+
+find_package(ament_cmake REQUIRED)
+find_package(hyper_variables REQUIRED)
+find_package(hyper_state REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(yaml-cpp REQUIRED)
+
+file(GLOB_RECURSE PROJECT_SOURCE_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/include/*.hpp ${PROJECT_SOURCE_DIR}/internal/*.cpp)
 add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCE_FILES})
-add_library(Hyper::Sensors ALIAS ${PROJECT_NAME})
+ament_export_targets(${PROJECT_NAME} HAS_LIBRARY_TARGET)
 
-# Fetch (external) content.
-FetchContent_Declare(HyperState GIT_REPOSITORY https://github.com/VIS4ROB-lab/HyperState.git GIT_TAG 36d6bffdda370e5675417413eecbc9d0ce9d82c9)
-FetchContent_MakeAvailable(HyperState)
+target_include_directories(${PROJECT_NAME} PUBLIC
+        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
+target_link_libraries(${PROJECT_NAME} yaml-cpp)
 
-# Find Eigen target if not present.
-if (NOT TARGET Eigen3::Eigen)
-    find_package(Eigen3 REQUIRED NO_MODULE)
-endif ()
+ament_target_dependencies(${PROJECT_NAME} hyper_variables hyper_state cv_bridge yaml-cpp)
+ament_export_dependencies(hyper_variables hyper_state cv_bridge yaml-cpp)
 
-# Find GTest target if not present.
-if (NOT TARGET GTest::GTest)
-    find_package(GTest REQUIRED)
-endif ()
+install(
+        DIRECTORY include/
+        DESTINATION include
+)
 
-# Find glog target if not present.
-if (NOT TARGET glog::glog)
-    find_package(glog REQUIRED)
-endif ()
+install(
+        TARGETS ${PROJECT_NAME}
+        EXPORT ${PROJECT_NAME}
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include
+)
 
-# Find cv_bridge.
-if (NOT TARGET cv_bridge::cv_bridge)
-    find_package(cv_bridge REQUIRED)
-endif ()
+if (BUILD_TESTING)
+    find_package(ament_cmake_gtest REQUIRED)
+    file(GLOB_RECURSE PROJECT_TEST_FILES CONFIGURE_DEPENDS ${PROJECT_SOURCE_DIR}/tests/*.hpp ${PROJECT_SOURCE_DIR}/tests/*.cpp)
 
-# Find yaml-cpp.
-if (NOT TARGET yaml-cpp)
-    find_package(yaml-cpp REQUIRED)
-endif ()
-
-if (HYPER_BUILD_WITH_CERES)
-    # Find Ceres target if not present.
-    if (NOT TARGET Ceres::ceres)
-        find_package(Ceres REQUIRED)
+    if (PROJECT_TEST_FILES)
+        ament_add_gtest(${PROJECT_NAME}_tests ${PROJECT_TEST_FILES})
+        target_include_directories(${PROJECT_NAME}_tests PUBLIC
+                $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
+                $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/tests/include>
+                $<INSTALL_INTERFACE:include>
+                )
+        target_link_libraries(${PROJECT_NAME}_tests ${PROJECT_NAME})
     endif ()
 endif ()
 
-# Add includes and link libraries.
-target_include_directories(${PROJECT_NAME} PUBLIC $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include> $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>)
-target_link_libraries(${PROJECT_NAME} PUBLIC Hyper::State PUBLIC cv_bridge::cv_bridge PUBLIC yaml-cpp)
-
-# Build tests.
-if (HYPER_BUILD_TESTS)
-    add_subdirectory(${PROJECT_SOURCE_DIR}/apps/tests)
-endif (HYPER_BUILD_TESTS)
+ament_package()
